# sdl2libs

./: CMakeLists.txt  README.MD
TestingApp/: CMakeLists.txt
TestingApp/include/: game.hpp  gamestate.hpp  titlestate.hpp
TestingApp/source/: game.cpp  main.cpp  titlestate.cpp
sdl2base/: CMakeLists.txt
sdl2base/include/: input.hpp  renderer.hpp  sdl2base.hpp  window.hpp
sdl2base/source/: input.cpp  logger.cpp  renderer.cpp  sdl2base.cpp  window.cpp
sdl2font/: CMakeLists.txt
sdl2font/include/: glyphData.h  sdl2font.hpp
sdl2font/source/: sdl2font.cpp
sdllib/: CMakeLists.txt
sdllib/include/: logger.hpp  sdllib.hpp
sdllib/include/graphics/: font.hpp  glyphData.hpp  renderer.hpp  texture.hpp  window.hpp
sdllib/include/input/: input.hpp
sdllib/source/: logger.cpp  sdllib.cpp
sdllib/source/graphics/: font.cpp  renderer.cpp  texture.cpp  window.cpp
sdllib/source/input/: input.cpp
